chore: Add workaround for Google Java Format with Java version > 11
Also updates compile and runtime dependencies to latest published