@@ -109,24 +109,24 @@
         <maven.compiler.target>11</maven.compiler.target>
 
         <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
-        <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
-        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+        <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
+        <maven.compiler.plugin.version>3.12.0</maven.compiler.plugin.version>
         <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
         <maven.gpg.plugin.version>3.1.0</maven.gpg.plugin.version>
         <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
         <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.5.0</maven.javadoc.plugin.version>
-        <maven.release.plugin.version>3.0.0</maven.release.plugin.version>
+        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
+        <maven.release.plugin.version>3.0.1</maven.release.plugin.version>
         <maven.source.plugin.version>3.3.0</maven.source.plugin.version>
-        <maven.surefire.plugin.version>3.1.0</maven.surefire.plugin.version>
-        <maven.exec.plugin.version>3.1.0</maven.exec.plugin.version>
+        <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
+        <maven.exec.plugin.version>3.1.1</maven.exec.plugin.version>
 
         <selenium.version>3.141.59</selenium.version>
         <appium.version>7.6.0</appium.version>
-        <slf4j.version>2.0.7</slf4j.version>
-        <jackson.version>2.15.1</jackson.version>
-        <google.java.format.version>1.15.0</google.java.format.version>
-        <picocli-version>4.7.3</picocli-version>
+        <slf4j.version>2.0.9</slf4j.version>
+        <jackson.version>2.16.0</jackson.version>
+        <google.java.format.version>1.19.1</google.java.format.version>
+        <picocli-version>4.7.5</picocli-version>
         <testng.version>7.8.0</testng.version>
         <junit.version>4.13.2</junit.version>
         <mockito.version>2.21.0</mockito.version>
@@ -271,6 +271,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
+                    <configuration>
+                        <!-- Required configuration for execution with google-java-format library -->
+                        <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
